2006-01-06  Sebastien Bacher  <seb128@debian.org>

	* gnome-mouse-properties.glade: 
	make mouse click work with both left/right buttons,
	patch by akmal <cowdinosaur@gmail.com> (Fixes: #321225)

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-mouse-properties.c: (setup_dialog): Mark some code static
	and remove some unused code.

2005-10-24  Jens Granseuer <jensgr@gmx.net>

	Fixes #318746

	* gnome-mouse-properties.c (populate_tree_model): gcc 2.95 compilation
	fixes.

2005-09-16  Sebastien Bacher  <seb128@debian.org>

	* gnome-mouse-properties.c: (populate_tree_model):
	fix a crasher when the cursor theme has no icon.

2005-08-31  Rodrigo Moya <rodrigo@novell.com>

	* gnome-mouse-properties.c (delay_value_changed_cb): guard against
	invalid values from the GtkHScale widget.

2005-08-30  Sven Herzberg  <herzi@gnome-de.org>

	* gnome-mouse-properties.c: listen to the XCURSOR_PATH environment
	variable (Closes: #312534).

2005-08-24  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-mouse-properties.c: (cursor_changed): Move the call to
	g_free (cursor_font) outside of the conditional so it gets free'd
	in both cases.

2005-08-01  Sebastien Bacher  <seb128@debian.org>

	* gnome-mouse-properties.c: (cursor_theme_changed): no need to allocate
	a string for the theme when there is no theme installed.

2005-08-01  Sebastien Bacher  <seb128@debian.org>

	* gnome-mouse-properties.c: (cursor_theme_changed):
	don't crash if there is no cursor theme installed (Closes: #311599).

2005-07-31  Sebastien Bacher  <seb128@debian.org>

	* gnome-mouse-properties.c: (delay_value_changed_cb),
	(setup_dialog): 
	update dynamically the double click label (Closes: #166908).

2005-07-31  Sebastien Bacher  <seb128@debian.org>

	* gnome-mouse-properties.glade: 
	update of the glade file, no need to restart the session to apply 
	the changes with GTK 2.8 (Closes: #312070).

2005-07-12  Sven Herzberg  <herzi@gnome-de.org>

	* gnome-mouse-properties.c: fix the without HAVE_XCURSOR build
