@@ -621,7 +621,7 @@
 			      <child>
 				<widget class="GtkLabel" id="label3">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">Cursor Size:</property>
+				  <property name="label" translatable="yes">Pointer Size:</property>
 				  <property name="use_underline">False</property>
 				  <property name="use_markup">False</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -832,7 +832,7 @@
 	  <child>
 	    <widget class="GtkLabel" id="label2">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">Cursors</property>
+	      <property name="label" translatable="yes">Pointers</property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">False</property>
 	      <property name="justify">GTK_JUSTIFY_CENTER</property>
