@@ -1,3 +1,11 @@
+2006-01-28  Scott Bronson <bronson@rinspin.com>
+
+	Fixes #318056
+
+	* gnome-mouse-properties.c (cursor_font_changed):
+	* gnome-mouse-properties.glade: use "mouse pointer" instead of "cursor"
+	in user-visible strings.
+
 2006-01-06  Sebastien Bacher  <seb128@debian.org>
 
 	* gnome-mouse-properties.glade: 
